# risk-ai-workshop

./: .gitignore  Pipfile  README.md  install-python-dependencies.sh  pyproject.toml  references.bib  requirements-py3.10.txt  requirements-py3.11.txt  requirements-py3.12.txt  requirements-py3.13.txt  requirements-py3.9.txt  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci-cd.yml  ci.yml
exercises/: 1-intro.md  2-high-risk-ai.md  4-future-ai-risk.md
model-selection/: dvc.yaml  params.yaml  prepare.py
model_selection/: dvc.yaml  fit.py  params.yaml  split.py
notebooks/: adversarial-ml-examples-exercises.ipynb  causal-models-exercises.ipynb  churn.ipynb  generate-latex-tables.ipynb  graphical-models-exercises.ipynb  high-risk-exercises.ipynb  intro-exercises.ipynb  introduction-examples-exercises.ipynb  language-embeddings.ipynb  model-selection-examples.ipynb  model-selection-exercises.ipynb  probability-polytope-exercises.ipynb  risk-ai-practice-exercises.ipynb  rl-churn-exercises.ipynb  rl-churn.ipynb  simpsons-paradox-examples-exercises.ipynb  simpsons-paradox-exercises.ipynb  simpsons-paradox.ipynb
notebooks/data/: .gitignore  adversarial-default-for-x-validation.csv  aggregate-claim-1.csv  aggregate-claim.csv  big-claim-events.csv  customer-health.csv  hits.csv  (+8 more)
risk_learning/: config.py  risk_learning.py  simpson.py  tex.py
slides/: ai_for_risk_header.tex  references.bib
tests/: __init__.py  test_arr.py  test_model_selection_pipeline.py  test_notebooks_run.py  test_risk_learning.py  test_simpson.py  test_tex.py
(+57 files in other folders)
