[project]
name = "risk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Larsen", email = "munichpavel@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.5.7",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
]


[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "nbformat>=5.10.4",
    "pytest>=9.0.3",
]
