[project]
name = "risk-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Paul Larsen", email = "munichpavel@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "fg-data-profiling>=4.19.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "matplotlib>=3.9.4",
    "pandas>=2.3.3",
    "polars>=1.36.1",
    "scikit-learn>=1.6.1",
    "setuptools<=69.5.1",
]


[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"

[tool.uv]
exclude-newer = "7 days"

[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "flake8>=7.3.0",
    "nbformat>=5.10.4",
    "pytest>=8.4.2",
]
